# This is added only if the nation files are needed, so no need to conditionally
# include them.

install(
  FILES
  abkhaz.ruleset
  aborigines.ruleset
  abyssinian.ruleset
  acadian.ruleset
  acehnese.ruleset
  acrean.ruleset
  afghani.ruleset
  african.ruleset
  ainu.ruleset
  akwe.ruleset
  alandalus.ruleset
  alander.ruleset
  albanian.ruleset
  aleut.ruleset
  algerian.ruleset
  alsatian.ruleset
  amazigh.ruleset
  amazonian.ruleset
  american.ruleset
  andorran.ruleset
  angolan.ruleset
  anhaltian.ruleset
  animals.ruleset
  anishinaabe.ruleset
  antarctican.ruleset
  antiguan.ruleset
  antillean.ruleset
  apache.ruleset
  arab.ruleset
  aragonese.ruleset
  aramean.ruleset
  argentine.ruleset
  armenian.ruleset
  ashanti.ruleset
  assamese.ruleset
  assyrian.ruleset
  asturian.ruleset
  atlantean.ruleset
  australian.ruleset
  austrian.ruleset
  avar.ruleset
  aymara.ruleset
  azeri.ruleset
  aztec.ruleset
  babylonian.ruleset
  badian.ruleset
  bahamian.ruleset
  bahraini.ruleset
  bangladeshi.ruleset
  barbadian.ruleset
  barbarian.ruleset
  bashkir.ruleset
  basque.ruleset
  bavarian.ruleset
  belarusian.ruleset
  belgian.ruleset
  belgic.ruleset
  belizean.ruleset
  bengali.ruleset
  beninese.ruleset
  benin.ruleset
  bhutanese.ruleset
  biafran.ruleset
  bissauguinean.ruleset
  boer.ruleset
  boian.ruleset
  bolivian.ruleset
  bosnia.ruleset
  bosporan.ruleset
  botswanan.ruleset
  brandenburgian.ruleset
  brazilian.ruleset
  breton.ruleset
  british.ruleset
  briton.ruleset
  bruneian.ruleset
  bulgarian.ruleset
  burgundian.ruleset
  burgundic.ruleset
  burkinabe.ruleset
  burmese.ruleset
  burundi.ruleset
  buryat.ruleset
  byzantium.ruleset
  californian.ruleset
  cambodian.ruleset
  cameroonian.ruleset
  canadian.ruleset
  canari.ruleset
  cantonese.ruleset
  capeverdean.ruleset
  carantanian.ruleset
  carthaginian.ruleset
  castilian.ruleset
  catalan.ruleset
  celtiberian.ruleset
  celtic.ruleset
  centralafrican.ruleset
  centralamerican.ruleset
  centrallithuanian.ruleset
  chadian.ruleset
  cham.ruleset
  chananean.ruleset
  chechen.ruleset
  cherokee.ruleset
  chiapanec.ruleset
  chickasaw.ruleset
  chilean.ruleset
  chimu.ruleset
  chinese.ruleset
  chinook.ruleset
  choctaw.ruleset
  chola.ruleset
  chrobatian.ruleset
  chumash.ruleset
  chuvash.ruleset
  circassian.ruleset
  CMakeLists.txt
  colombian.ruleset
  comanche.ruleset
  comorian.ruleset
  confederate.ruleset
  congolesebrazzaville.ruleset
  congolese.ruleset
  cornish.ruleset
  corsican.ruleset
  cossack.ruleset
  costarican.ruleset
  cree.ruleset
  cretan.ruleset
  crimeantatar.ruleset
  croatian.ruleset
  crusader.ruleset
  cuban.ruleset
  curonian.ruleset
  cuyavian.ruleset
  cypriot.ruleset
  cyrenaican.ruleset
  czechoslovak.ruleset
  czech.ruleset
  dacian.ruleset
  dahomean.ruleset
  danish.ruleset
  darfuri.ruleset
  djiboutian.ruleset
  dominicano.ruleset
  dominican.ruleset
  dryad.ruleset
  dutch.ruleset
  eastgerman.ruleset
  easttimorese.ruleset
  ecuadorian.ruleset
  egyptianarab.ruleset
  egyptian.ruleset
  elamite.ruleset
  emirati.ruleset
  english.ruleset
  epirote.ruleset
  equatoguinean.ruleset
  eritrean.ruleset
  esperant.ruleset
  estonian.ruleset
  ethiopian.ruleset
  etruscan.ruleset
  european.ruleset
  evenki.ruleset
  faroese.ruleset
  fijian.ruleset
  filipino.ruleset
  finnish.ruleset
  flemish.ruleset
  florentine.ruleset
  formosan.ruleset
  franconian.ruleset
  frankish.ruleset
  french.ruleset
  frisian.ruleset
  friulian.ruleset
  fulani.ruleset
  gabonese.ruleset
  gaelic.ruleset
  galician.ruleset
  gallic.ruleset
  gambian.ruleset
  genoese.ruleset
  georgian.ruleset
  gepid.ruleset
  germanbelgian.ruleset
  germanic.ruleset
  german.ruleset
  ghanaian.ruleset
  ghana.ruleset
  ghaznavid.ruleset
  gokturk.ruleset
  goldenhorde.ruleset
  gothic.ruleset
  greaterpolish.ruleset
  greek.ruleset
  greenlander.ruleset
  grenadian.ruleset
  guanche.ruleset
  guarani.ruleset
  guatemalan.ruleset
  guinean.ruleset
  gupta.ruleset
  guyanese.ruleset
  hacker.ruleset
  haitian.ruleset
  hanoverian.ruleset
  han.ruleset
  hansa.ruleset
  hasinay.ruleset
  hawaiian.ruleset
  hellenic.ruleset
  helvetian.ruleset
  hephthalite.ruleset
  hessian.ruleset
  himyarite.ruleset
  hittite.ruleset
  holyroman.ruleset
  holysee.ruleset
  honduran.ruleset
  hopi.ruleset
  hungarian.ruleset
  hunnic.ruleset
  iberian.ruleset
  icelandic.ruleset
  illyrian.ruleset
  inca.ruleset
  indian.ruleset
  indoeuropean.ruleset
  indonesian.ruleset
  inuit.ruleset
  iranian.ruleset
  iraqi.ruleset
  irish.ruleset
  iroquois.ruleset
  israeli.ruleset
  israelite.ruleset
  italiangreek.ruleset
  italian.ruleset
  ivoirian.ruleset
  jaffna.ruleset
  jamaican.ruleset
  japanese.ruleset
  jolof.ruleset
  jordanian.ruleset
  kalmyk.ruleset
  kanem-bornu.ruleset
  karabakhi.ruleset
  karelian.ruleset
  karen.ruleset
  kashmiri.ruleset
  kashubian.ruleset
  katangan.ruleset
  kazakh.ruleset
  kenyan.ruleset
  khazar.ruleset
  khmer.ruleset
  khoisan.ruleset
  khwarezmian.ruleset
  kiribati.ruleset
  kittitian.ruleset
  komi.ruleset
  kongo.ruleset
  korean.ruleset
  kosovar.ruleset
  kuna.ruleset
  kurd.ruleset
  kushan.ruleset
  kuwaiti.ruleset
  kyrgyz.ruleset
  langobardic.ruleset
  lankese.ruleset
  laotian.ruleset
  latin.ruleset
  latvian.ruleset
  lebanese.ruleset
  lendian.ruleset
  leonese.ruleset
  lesothoan.ruleset
  liberian.ruleset
  liburnian.ruleset
  libyan.ruleset
  liechtensteiner.ruleset
  ligurian.ruleset
  lipkatatar.ruleset
  lippe.ruleset
  lithuanian.ruleset
  lojbanistani.ruleset
  lorrain.ruleset
  luwian.ruleset
  luxembourgish.ruleset
  lycian.ruleset
  maasai.ruleset
  macedonian.ruleset
  macedon.ruleset
  majapahit.ruleset
  Makefile.am
  Makefile.am.sh
  malagasy.ruleset
  malawian.ruleset
  malaysian.ruleset
  maldivian.ruleset
  malian.ruleset
  mali.ruleset
  maltese.ruleset
  mamluk.ruleset
  manchu.ruleset
  manx.ruleset
  maori.ruleset
  mapuche.ruleset
  marathi.ruleset
  marshallese.ruleset
  martian.ruleset
  mauritanian.ruleset
  mauritian.ruleset
  mayan.ruleset
  mazovian.ruleset
  mecklenburgian.ruleset
  median.ruleset
  messapian.ruleset
  metis.ruleset
  mexican.ruleset
  miao.ruleset
  micronesian.ruleset
  mikmaq.ruleset
  milanese.ruleset
  miskito.ruleset
  mitanni.ruleset
  mixtec.ruleset
  moldovan.ruleset
  moluccan.ruleset
  monegasque.ruleset
  mongol.ruleset
  mon.ruleset
  montenegrin.ruleset
  moravian.ruleset
  mordvin.ruleset
  moroccan.ruleset
  mozambican.ruleset
  mughal.ruleset
  muscovite.ruleset
  muskogee.ruleset
  mwiska.ruleset
  namibian.ruleset
  nauruan.ruleset
  navajo.ruleset
  neapolitan.ruleset
  nenets.ruleset
  nepali.ruleset
  nestorian.ruleset
  newfoundland.ruleset
  newzealand.ruleset
  nicaraguan.ruleset
  nigerian.ruleset
  nigerien.ruleset
  nimiipuu.ruleset
  norman.ruleset
  northkorean.ruleset
  northumbrian.ruleset
  norwegian.ruleset
  novgorodian.ruleset
  nubian.ruleset
  numidian.ruleset
  nuu-chah-nulth.ruleset
  occitan.ruleset
  ohlone.ruleset
  oldenburgian.ruleset
  oldprussian.ruleset
  omani.ruleset
  ossetian.ruleset
  ostrogothic.ruleset
  otomi.ruleset
  ottoman.ruleset
  ozite.ruleset
  paeonian.ruleset
  pakistani.ruleset
  palatinate.ruleset
  palestinian.ruleset
  palmyrene.ruleset
  panamanian.ruleset
  papuanewguinean.ruleset
  papuan.ruleset
  paraguayan.ruleset
  parthian.ruleset
  pashtun.ruleset
  pelasgian.ruleset
  persian.ruleset
  peruvian.ruleset
  phoenician.ruleset
  phrygian.ruleset
  pictish.ruleset
  piedmontese.ruleset
  pirate.ruleset
  polish.ruleset
  polynesian.ruleset
  pontic.ruleset
  portuguese.ruleset
  prussian.ruleset
  puertorican.ruleset
  purhepecha.ruleset
  qatari.ruleset
  quebecois.ruleset
  rapanui.ruleset
  raramuri.ruleset
  rhenish.ruleset
  riffian.ruleset
  riograndense.ruleset
  romanian.ruleset
  roman.ruleset
  romansh.ruleset
  russian.ruleset
  rusyn.ruleset
  ruthenian.ruleset
  rwandan.ruleset
  ryukyuan.ruleset
  sabine.ruleset
  sahrawi.ruleset
  saintlucian.ruleset
  saka.ruleset
  salishan.ruleset
  salvadoran.ruleset
  sami.ruleset
  sammarinese.ruleset
  samnite.ruleset
  samoan.ruleset
  samogitian.ruleset
  santomean.ruleset
  sardinian.ruleset
  sarmatian.ruleset
  saudi.ruleset
  savoyard.ruleset
  saxon.ruleset
  scanian.ruleset
  schleswig-holsteinian.ruleset
  scottishgaelic.ruleset
  scottish.ruleset
  scythian.ruleset
  seleucid.ruleset
  seljuk.ruleset
  seminole.ruleset
  senegalese.ruleset
  serbian.ruleset
  seychellois.ruleset
  shan.ruleset
  shawnee.ruleset
  sherpa.ruleset
  siberian.ruleset
  sicilian.ruleset
  sierraleonean.ruleset
  sikh.ruleset
  sikkimese.ruleset
  silesian.ruleset
  singaporean.ruleset
  singlebarbarian.ruleset
  sinhalese.ruleset
  sioux.ruleset
  slavic.ruleset
  slovakian.ruleset
  slovenian.ruleset
  solomonislander.ruleset
  somaliland.ruleset
  somali.ruleset
  songhai.ruleset
  sorbian.ruleset
  sotho.ruleset
  southafrican.ruleset
  southamerican.ruleset
  southkorean.ruleset
  southsudanese.ruleset
  southvietnamese.ruleset
  southyemeni.ruleset
  soviet.ruleset
  spanish.ruleset
  srivijaya.ruleset
  sudanese.ruleset
  suebian.ruleset
  sumerian.ruleset
  surinamese.ruleset
  swahili.ruleset
  swazi.ruleset
  swedish.ruleset
  swiss.ruleset
  syrian.ruleset
  tahitian.ruleset
  taino.ruleset
  tairona.ruleset
  taiwanese.ruleset
  tajik.ruleset
  tanganyikan.ruleset
  tanzanian.ruleset
  tatar.ruleset
  templar.ruleset
  teutonic.ruleset
  texan.ruleset
  thai.ruleset
  thracian.ruleset
  thuringian.ruleset
  tibetan.ruleset
  timurid.ruleset
  tocharian.ruleset
  togolese.ruleset
  toltec.ruleset
  tongan.ruleset
  transnistrian.ruleset
  transylvanian.ruleset
  trinidadian.ruleset
  tswana.ruleset
  tuareg.ruleset
  tunisian.ruleset
  tupi.ruleset
  turkishcypriot.ruleset
  turkmen.ruleset
  turk.ruleset
  tuvan.ruleset
  tyrolian.ruleset
  ugandan.ruleset
  ukrainian.ruleset
  un.ruleset
  urartian.ruleset
  uruguayan.ruleset
  uyghur.ruleset
  uzbek.ruleset
  vampire.ruleset
  vandalic.ruleset
  vanuatuan.ruleset
  vedic.ruleset
  veletian.ruleset
  venda.ruleset
  venetian.ruleset
  venetic.ruleset
  venezuelan.ruleset
  vermont.ruleset
  vietnamese.ruleset
  viking.ruleset
  vincentian.ruleset
  visigothic.ruleset
  vistulan.ruleset
  volapuk.ruleset
  volgabulgar.ruleset
  volgagerman.ruleset
  walloon.ruleset
  welsh.ruleset
  werewolf.ruleset
  westernpomeranian.ruleset
  westernroman.ruleset
  westindian.ruleset
  westphalian.ruleset
  wuerttembergian.ruleset
  xhosa.ruleset
  xiongnu.ruleset
  yakut.ruleset
  yemeni.ruleset
  yucatecan.ruleset
  yugoslav.ruleset
  zambian.ruleset
  zanzibari.ruleset
  zapotec.ruleset
  zhuang.ruleset
  zimbabwean.ruleset
  zulu.ruleset
  DESTINATION
  "${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/nation")
